# Hedron-AI

./: README.md  Repository Structure
agent/capabilities/decision_engine/: business_rules.py  risk_assessment.py
agent/capabilities/knowledge_graph/: data_connector.py  ontology_manager.py
agent/communication/: grpc_channel.py  pubsub_backend.py
agent/lifecycle/: agent_state_machine.py  health_monitor.py
integrations/oracle/: ebs_connector.py  jde_adapter.py
integrations/salesforce/: bulk_api.py  metadata_loader.py
integrations/sap/: bapi_mapper.py  idoc_handler.py
orchestration/consensus/pbft/: pbft_messages.py  pbft_node.py  view_change_handler.py
orchestration/consensus/raft/: log_replication.py  raft_leader.py
orchestration/scheduler/: dag_scheduler.py  resource_optimizer.py
protocols/grpc/proto/: agent_service.proto  consensus.proto
protocols/grpc/service_impl/: agent_server.py  client_stub.py
protocols/websockets/: auth_middleware.py  message_serializer.py
runtime/k8s/helm_charts/: values-production.yaml
runtime/k8s/operators/: agent_operator.py  consensus_operator.py
runtime/k8s/serverless/aws/: lambda_agent.py  layer_builder.sh
runtime/k8s/serverless/azure/: deploy.ps1  function_app.py
security/federated/: encrypted_aggregation.py  parameter_server.py
security/zkp/snark/: groth16.py  setup_parameters.json
security/zkp/stark/: Cargo.toml
security/zkp/stark/src/: circuits.rs  lib.rs
workflows/: cd-prod.yml  ci-main.yml  performance-benchmark.yml  security-audit.yml
